[workspace]
members = [
  "common/digest",
  "common/edit-distance",
  "common/test-allocator",
  "detcore",
  "detcore-model",
  "detcore/tests/testutils",
  "flaky-tests",
  "hermit-cli",
  "hermit-verify",
  "tests",
]
resolver = "2"

[profile.release]
opt-level = "s"   # Optimize for size
strip = true      # Remove debug symbols
